<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>micycle</groupId>
	<artifactId>PGS</artifactId>
	<version>2.1-SNAPSHOT</version>
	<name>Processing Geometry Suite</name>
	<description>Geometric algorithms for Processing</description>

	<properties>
		<sonar.projectKey>micycle1_PTS</sonar.projectKey>
		<sonar.organization>micycle</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<processing.library.dir>${user.home}\Documents\Processing\libraries\PGS\library</processing.library.dir>
		<maven.compiler.release>17</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<fatJarName>PGS</fatJarName>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>deploy</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.2</version>
				<configuration>
					<failOnError>false</failOnError>
					<subpackages>micycle.pgs</subpackages>
					<excludePackageNames>micycle.pgs.color,micycle.pgs.commons</excludePackageNames>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin> <!-- for test running -->
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.1</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-code-coverage-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>uber-jar</id>
			<build>
				<finalName>${fatJarName}</finalName>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.5.0</version>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<minimizeJar>true</minimizeJar>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/**</exclude>
										<exclude>**/*.png</exclude>
										<exclude>**/*.txt</exclude>
										<exclude>**/*.ttf</exclude>
										<exclude>**/*.svg</exclude>
										<exclude>**/*.gif</exclude>
										<exclude>**/*.jpg</exclude>
										<exclude>**/*.properties</exclude>
										<exclude>processing/**</exclude>
										<exclude>org/w3c/**</exclude>
										<exclude>japplemenubar/**</exclude>
									</excludes>
								</filter>
							</filters>
							<artifactSet>
								<excludes>
									<exclude>processing:*</exclude>
								</excludes>
							</artifactSet>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>local-processing</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-shade-plugin</artifactId>
						<version>3.5.0</version>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<minimizeJar>true</minimizeJar>
							<finalName>PGS</finalName>
							<outputDirectory>${processing.library.dir}</outputDirectory>
							<maven.javadoc.skip>true</maven.javadoc.skip>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/**</exclude>
										<exclude>**/*.png</exclude>
										<exclude>**/*.svg</exclude>
										<exclude>**/*.gif</exclude>
										<exclude>**/*.jpg</exclude>
										<exclude>**/*.properties</exclude>
										<exclude>processing/**</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>shade</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>osgeo</id>
			<name>osgeo</name>
			<url>https://repo.osgeo.org/repository/release</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<name>jitpack</name>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>jts-snapshots</id>
			<url>https://repo.eclipse.org/content/repositories/jts-snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>processing-core-4</artifactId>
			<version>4.4.4</version>
			<scope>provided</scope> <!-- don't package into uber jar -->
			<optional>true</optional> <!-- user artifact should override when provided -->
		</dependency>
		<dependency>
			<groupId>org.locationtech.jts</groupId>
			<artifactId>jts-core</artifactId>
			<version>1.20.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>campskeleton</artifactId>
			<version>spatial-index-845e720af6-1</version>
		</dependency>
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>1.5.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.gwlucastrig</groupId>
			<artifactId>Tinfour</artifactId>
			<version>7302050e53</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>JMedialAxis</artifactId>
			<version>5207bec2f2</version>
			<optional>true</optional> <!-- user artifact should override when provided -->
			<exclusions>
				<exclusion>
					<groupId>org.locationtech.jts</groupId>
					<artifactId>jts-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.dyn4j</groupId>
			<artifactId>dyn4j</artifactId>
			<version>[4.0,)</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.tinspin</groupId>
			<artifactId>tinspin-indexes</artifactId>
			<version>2.1.3</version>
		</dependency>
		<dependency> <!-- for test running -->
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>[5.10,)</version>
			<scope>test</scope>
		</dependency>
		<dependency> <!-- for test running -->
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>[5.10,)</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>balaban-intersection</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>UniformNoise</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>space-filling-curves</artifactId>
			<version>1.0</version>
			<exclusions>
				<exclusion>
					<groupId>org.locationtech.jts</groupId>
					<artifactId>jts-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.paudan</groupId>
			<artifactId>jswarmopt</artifactId>
			<version>1.0.3a</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>TrapMap</artifactId>
			<version>1.0</version>
			<exclusions>
				<exclusion>
					<groupId>quil</groupId>
					<artifactId>processing-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>fastutil</artifactId>
			<version>8.5.12</version>
		</dependency>
		<dependency>
			<groupId>net.jafama</groupId>
			<artifactId>jafama</artifactId>
			<version>2.3.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.openjump-gis</groupId>
			<artifactId>topology-extension</artifactId>
			<version>9c1d788f8d</version>
			<exclusions>
				<exclusion>
					<groupId>org.locationtech.jts</groupId>
					<artifactId>jts-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.scoutant</groupId>
			<artifactId>polyline-decoder</artifactId>
			<version>5b6f55fc1a</version>
		</dependency>
		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>dsiutils</artifactId>
			<version>2.7.2</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>RectPacking</artifactId>
			<version>9178e79df3</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>BetterBeziers</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>Hobby-Curves</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.whitegreen</groupId>
			<artifactId>Dalsoo-Bin-Packing</artifactId>
			<version>bde2a3ef09</version>
			<exclusions>
				<exclusion>
					<groupId>org.locationtech.jts</groupId>
					<artifactId>jts-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>SRPG</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.scrtwpns</groupId>
			<artifactId>mixbox</artifactId>
			<version>2.0.0</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>com.github.micycle1</groupId>
			<artifactId>GeoBlitz</artifactId>
			<version>c8dbe31b77</version>
		</dependency>
	</dependencies>

</project>
